--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         canv.clearRect(0,0,canvas.width,canvas.height);
     })
 
-    // this save func saves the canvas to the locally while in session (with no refresh) as SignaturedItems by using setItem() of localStorage
+    // this save func saves the canvas to the locally as SignaturedItems by using setItem() of localStorage
 
     // also it allows the canvas to download to our window system with the file name as my-canvas.png
 
